# cataloguing_interface_components

./: .gitignore  README.md
Database Design/: Database_Schema_Questions.txt  Query_Planning.txt  view_schema.html
db/: Cargo.toml
db/migrations/: 20240920125203_db_init_draft.sql  20240928102709_dummy_data.sql
db/src/: lib.rs  main.rs
dropbox/: Cargo.toml
dropbox/src/: main.rs
frontend/: index.html  metadata_fields.txt
frontend/css/: index.css  navigation.css  page_catalogue.css  page_edit.css  variables.css
frontend/js/: index.js  table.js
frontend/js/page_catalogue/: functionality.js
frontend/js/page_edit/: components.js
res/svg/: lesgo.html
