[package]
name = "cataloguing_interface_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
serde = { version = "1.0.198", features = ["derive"] }
ureq = { version = "2.9.7", features = ["json"] }
